fix: updated gap and line height

--- a/qr-code-component/styles.css
+++ b/qr-code-component/styles.css
@@ -49,7 +49,7 @@ html:focus-within {
 body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
-    line-height: 1.2L;
+    line-height: 1.2;
 }
 
 /* A elements that don't have a class get default styles */
@@ -94,7 +94,7 @@ body {
     padding: 1rem 1rem 2.75rem 1rem;
     border-radius: 1rem;
     max-width: 20rem;
-    gap: 1.125rem;
+    gap: 1.25rem;
     text-align: center;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 }
